--- a/lab3/lab3-Part_I Time-Frequency-Spectrogram.ipynb
+++ b/lab3/lab3-Part_I Time-Frequency-Spectrogram.ipynb
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import functions and libraries\n",
@@ -56,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set the default card to be the built-in raspberry-pi audio\n",
@@ -129,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot an image of the spectrogram y, with the axis labeled with time tl,\n",
@@ -220,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Play sounds\n",
@@ -317,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def myspectrogram(x,m,fs, dbf=60):\n",
@@ -420,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def myspectrogram_hann(x,m,fs,dbf=60):\n",
@@ -515,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def myspectrogram_hann_ovlp(x,m,fs, dbf=60):\n",
@@ -689,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
