removed old lab4 and added updated

--- a/lab4_part_I_updated/Lab4-Part_I_Radio_Comm_2018.ipynb
+++ b/lab4_part_I_updated/Lab4-Part_I_Radio_Comm_2018.ipynb
@@ -13,9 +13,11 @@
     "<center><img src=\"./newiface.png\" alt=\"gsm\" style=\"width: 400px;\"/></center>\n",
     "<center>Figure 2: The new interface </center>\n",
     "\n",
-    "The interface you got contains a usb hub that connects to your labtop. The usb hub has two devices: A USB audio card in which you will send and receive audio to your radio, and the CP2102 USB to serial that enables you to key the radio from your python script using the pyserial library. When using the Raspberry Pi you will be able to key the radio using one of the General Purpose IO (GPIO) pins, so the CP2102 will be necessary if you are doing the lab on a laptop computer. The interface also has a ground-loop isolation box. It has two audio transformers that prevent voltage potential from your computer to get to the radio. The isolation box has a Kenwood style audio connector with a 2.5mm and 3.5mm audio Jack that connects to your Baofeng radio. \n",
+    "The interface you got contains a usb hub that connects to your Pi. Make sure the sound card is connected to the hub. When using the Raspberry Pi you will be able to key the radio using one of the General Purpose IO (GPIO) pins, so an extra CP2102 will need to be connected to the hub if you are using a laptop. The interface also has a ground-loop isolation box. It has two audio transformers that prevent voltage potential from your computer to get to the radio. The isolation box has a Kenwood style audio connector with a 2.5mm and 3.5mm audio jack that connects to your Baofeng radio. \n",
     "\n",
-    "** Unfortunately the USB slots on the pi are quite cramped. It's impossible to plug both the SDR and the USB audio without an extention cord or a USB hub. Make sure you use one!\n",
+    "** Unfortunately the USB slots on the pi are quite cramped. It's impossible to plug both the SDR and the USB audio without an extention cord or a USB hub. Connect the SDR straight to the Pi, and use the hub/extension to connect the sound card. \n",
+    "\n",
+    "# You cannot run both the sound card and SDR connected to the hub! It is unreliable due to power issues. \n",
     "\n"
    ]
   },
@@ -341,7 +343,7 @@
    "outputs": [],
    "source": [
     "builtin_idx = 0\n",
-    "usb_idx = 2"
+    "USB_idx = 2"
    ]
   },
   {
@@ -506,7 +508,7 @@
     "* Pick an experimental channel 71-78\n",
     "* Set the power of the radio to low if it's not set already (short press the # key. shows up as a small 'L')\n",
     "\n",
-    "* Connect the jumper cables from the interface to the GPIO pins. Connect the ground to Pin number 9, and the other to pin number 12. \n",
+    "* Connect the jumper cables from the interface to the GPIO pins. Connect the ground to Pin number 9, and the other to pin number 12. On the standalone isolaters, the ground is marked by blue tape. On the plexiglass-based interfaces, ground is the red jumper. Note, on the plexiglass models, you may find it useful to use a jumper extension.\n",
     "\n",
     "<center><img src=\"./pinout.jpg\" alt=\"gsm\" style=\"width: 400px;\"/></center>\n",
     "<center>Figure 2: Raspberry pi pinout</center>\n",
@@ -616,7 +618,7 @@
     "* You will then look at the amplitude of the received tone. The amplitude should increase linearly at first, then taper off and saturate. You need to figure out what are the audio amplitude values in the linear regime. The range of volumes you will get will correspond to the range of audio signals with your audio settings that will not be distorted!\n",
     "\n",
     "#### Setup\n",
-    "* Connect the SDR to a USB port on the Pi.\n",
+    "* Connect the SDR to a USB port on the Pi (not the hub!).\n",
     "* Disconnect the antenna from the SDR -- the signal will be stong anyways and we don't want to saturate the SDR. \n",
     "* Place the radio as far away from the SDR as possible to minimize interference\n",
     "* Set your radio to one of the experimental channel on the radio (channels 71-78) with low-power. It's recommended to use the UHF channels 75-78 first-- but if they are occupied use the VHF.\n",
@@ -2142,7 +2144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
