filled in filters section and demod function

--- a/lab5_part_II/Lab5-APRS-TNC.ipynb
+++ b/lab5_part_II/Lab5-APRS-TNC.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
     "import multiprocessing\n",
     "\n",
     "from math import gcd\n",
-    "import sounddevice as sd\n",
-    "import RPi.GPIO as GPIO\n",
+    "#import sounddevice as sd\n",
+    "#import RPi.GPIO as GPIO\n",
     "from functools import reduce\n",
     "from numpy import ones,zeros, pi, cos, exp, sign\n",
     "\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +223,11 @@
     "        self.prev_ph = 0  # previous phase to maintain continuous phase when recalling the function\n",
     "        \n",
     "        ##  Generate Filters for the demodulator\n",
-    "        self.h_lp = \n",
-    "        self.h_lpp = \n",
-    "        self.h_space = \n",
-    "        self.h_mark = \n",
-    "        self.h_bp = \n",
+    "        self.h_lp = signal.firwin(self.N,self.BW/self.fs*1.0,window='hanning')\n",
+    "        self.h_lpp = signal.firwin(self.N,self.BW*2*1.2/self.fs,window='hanning')\n",
+    "        self.h_space = self.h_lp*exp(1j*2*pi*(2200)*r_[-N/2:N/2]/self.fs)\n",
+    "        self.h_mark = self.h_lp*exp(1j*2*pi*(1200)*r_[-N/2:N/2]/self.fs)\n",
+    "        self.h_bp = (signal.firwin(self.N,self.BW/self.fs*2.2,window='hanning'))*exp(1j*2*pi*1700*r_[-self.N/2:self.N/2]/self.fs)\n",
     "\n",
     "\n",
     "        ## PLL state variables  -- so conntinuity between buffers is preserved\n",
@@ -331,12 +331,12 @@
     "        #Demodulates a buffer and returns valid NRZ\n",
     "    \n",
     "        # Similar to afsk1200_demod,  for you to complete\n",
-    "    \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        sig = signal.fftconvolve(sig.copy(),h_bp,'same')\n",
+    "        mark = abs(signal.fftconvolve(sig,h_mark,mode='same'))\n",
+    "        space = abs(signal.fftconvolve(sig,h_space,mode='same'))\n",
+    "        NRZ = mark-space\n",
+    "        NRZ = signal.fftconvolve(NRZ,h_lpp,'same')\n",
+    "\n",
     "        return NRZ\n",
     "\n",
     "\n",
@@ -1501,7 +1501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
