filled in modulate function

--- a/lab5_part_II/Lab5-APRS-TNC.ipynb
+++ b/lab5_part_II/Lab5-APRS-TNC.ipynb
@@ -295,7 +295,7 @@
     "        return  bitsu[:-16].tobytes() \n",
     "    \n",
     "    \n",
-    "    def modulate(self,bits):\n",
+    "    def modulate(self, bits):\n",
     "    # the function will take a bitarray of bits and will output an AFSK1200 modulated signal of them, sampled at fs Hz\n",
     "    #  Inputs:\n",
     "    #         bits  - bitarray of bits\n",
@@ -305,11 +305,19 @@
     "    \n",
     "        \n",
     "        # For you to complete\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        fss = lcm((1200, self, fs))\n",
+    "        deci = fss // self.fs\n",
+    "    \n",
+    "        Nb = fss // 1200\n",
+    "        nb = len(bits)\n",
+    "        NRZ = ones((nb, Nb))\n",
+    "        for n in range(0, nb):\n",
+    "            if bits[n]:\n",
+    "                NRZ[n, :]=-NRZ[n, :]\n",
+    "    \n",
+    "        freq = 1700 + 500*NRZ.ravel()\n",
+    "        ph = 2.0*pi*integrate.cumtrapz(freq)/fss\n",
+    "        sig = cos(ph[::deci])\n",
     "        \n",
     "        return sig \n",
     "    \n",
