--- a/ee123-project/ee123-project-recieve.ipynb
+++ b/ee123-project/ee123-project-recieve.ipynb
@@ -77,9 +77,10 @@
     "Qin = Queue.Queue()\n",
     "cQin = Queue.Queue()\n",
     "\n",
-    "def queueREC_callback(indata, frames, time, status):\n",
+    "def queueREC_callback(indata, outdata, frames, time, status):\n",
     "    if status:\n",
     "        print(status)\n",
+    "    outdata[:] = indata\n",
     "    Qin.put_nowait( indata.copy()[:,0] )  # Global queue"
    ]
   },
@@ -89,29 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st_rec = sd.InputStream( device=(usb_idx, builtin_idx), callback=queueREC_callback)\n",
+    "sd.default.samplerate=48000\n",
+    "sd.default.channels = 1\n",
     "\n",
-    "Done = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def record_audio(qin, queue):\n",
-    "    with st_rec:\n",
-    "        while True:\n",
-    "            if not queue.empty():\n",
-    "                if queue.get() == \"EOT\":\n",
-    "                    st_rec.stop()\n",
-    "                    st_rec.close()\n",
-    "            \n",
-    "#start recording\n",
-    "t_rec = threading.Thread(target=record_audio, args=(Qin, cQin), name='t_rec')\n",
-    "t_rec.start()"
+    "st_rec = sd.Stream( device=(usb_idx, builtin_idx), callback=queueREC_callback)"
    ]
   },
   {
@@ -121,7 +103,28 @@
    "outputs": [],
    "source": [
     "fs = 48000\n",
+    "\n",
+    "# def record_audio(qin, queue):\n",
+    "#     with st_rec:\n",
+    "#         while True:\n",
+    "#             if not queue.empty():\n",
+    "#                 if queue.get() == \"EOT\":\n",
+    "#                     st_rec.stop()\n",
+    "#                     st_rec.close()\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "modem = TNC.TNCaprs(fs = fs ,Abuffer = 512,Nchunks = 1)\n",
+    "\n",
+    "#start recording\n",
+    "# record_audio(Qin, cQin)\n",
+    "st_rec.start()\n",
     "\n",
     "def decode_packets():\n",
     "    print(\"decoding packets\")\n",
@@ -158,12 +161,16 @@
     "                print(\"write\")\n",
     "        if state == 2 :\n",
     "            break\n",
+    "        if(time.time() - starttime) > 10:\n",
+    "            cQin.put(\"EOT\")\n",
     "\n",
     "    print(time.time() - starttime)\n",
-    "    cQin.put(\"EOT\")\n",
+    "    \n",
     "    f1.close()\n",
     "\n",
-    "decode_packets()"
+    "decode_packets()\n",
+    "st_rec.stop()\n",
+    "st_rec.close()"
    ]
   },
   {
