added code to recieve image and save it

--- a/ee123-project/ee123-project-recieve.ipynb
+++ b/ee123-project/ee123-project-recieve.ipynb
@@ -75,7 +75,6 @@
    "source": [
     "#create a queue to store packets\n",
     "Qin = Queue.Queue()\n",
-    "cQin = Queue.Queue()\n",
     "\n",
     "def queueREC_callback(indata, outdata, frames, time, status):\n",
     "    if status:\n",
@@ -103,28 +102,11 @@
    "outputs": [],
    "source": [
     "fs = 48000\n",
-    "\n",
-    "# def record_audio(qin, queue):\n",
-    "#     with st_rec:\n",
-    "#         while True:\n",
-    "#             if not queue.empty():\n",
-    "#                 if queue.get() == \"EOT\":\n",
-    "#                     st_rec.stop()\n",
-    "#                     st_rec.close()\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "modem = TNC.TNCaprs(fs = fs ,Abuffer = 512,Nchunks = 1)\n",
     "\n",
     "#start recording\n",
-    "# record_audio(Qin, cQin)\n",
     "st_rec.start()\n",
+    "fname = \"\"\n",
     "\n",
     "def decode_packets():\n",
     "    print(\"decoding packets\")\n",
@@ -151,7 +133,9 @@
     "            print(infostr)\n",
     "\n",
     "            if state == 0 and ax.destination[:5]==\"BEGIN\":\n",
-    "                f1 = open(\"rec_\"+ax.info.decode(),\"wb\")\n",
+    "                #f1 = open(\"rec_\"+ax.info.decode(),\"wb\")\n",
+    "                fname = \"rec_\"+ax.info.decode()\n",
+    "                f1 = io.BufferedWriter(Bytes.IO())\n",
     "                state = 1\n",
     "            elif state == 1 and ax.destination[:3] == \"END\": \n",
     "                state = 2  \n",
@@ -161,12 +145,10 @@
     "                print(\"write\")\n",
     "        if state == 2 :\n",
     "            break\n",
-    "        if(time.time() - starttime) > 10:\n",
-    "            cQin.put(\"EOT\")\n",
     "\n",
     "    print(time.time() - starttime)\n",
     "    \n",
-    "    f1.close()\n",
+    "    #f1.close()\n",
     "\n",
     "decode_packets()\n",
     "st_rec.stop()\n",
@@ -178,7 +160,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f1.seek(0)\n",
+    "recv_img = Image.open(f1)\n",
+    "#inverse DCT function here\n",
+    "#new_img = ###FUNCTION(recv_img)\n",
+    "new_img = recv_img #temporary\n",
+    "new_img.save(fname)"
+   ]
   }
  ],
  "metadata": {
@@ -197,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
