--- a/ee123-project/ee123-project-send.ipynb
+++ b/ee123-project/ee123-project-send.ipynb
@@ -147,11 +147,13 @@
     "img_name = \"test.jpg\"\n",
     "image =  Image.open(img_name)\n",
     "### test.jpg is any image file to test. rename your image to test\n",
-    "#downsample image\n",
-    "down = downsample(image, 30)\n",
+    "#downsample image or place compression function\n",
+    "cmp_img = downsample(image, 30)\n",
+    "#cmp_img = ###FUNCTION###\n",
+    "\n",
     "#add downsampled image to a byte buffer\n",
     "byte_img = io.BytesIO()\n",
-    "down.save(byte_img, format='PNG')\n",
+    "cmp_img.save(byte_img, format='PNG', optimize=True) #converts to lossless PNG with compression\n",
     "byte_img.seek(0)\n",
     "byte_img = io.BufferedReader(byte_img)"
    ]
@@ -190,12 +192,10 @@
     "    npp = 0\n",
     "    tmp = modem.modulatPacket(callsign, b\"\", 'BEGIN', img_name.encode() , preflags=80, postflags=10 )\n",
     "    GPIO.output(PTT, GPIO.LOW)\n",
-    "    #Qout.put(tmp)\n",
     "    while(1):\n",
     "        GPIO.output(PTT, GPIO.HIGH)\n",
     "        bytes = byte_img.read(256)\n",
     "        tmp = modem.modulatPacket(callsign, b\"\", str(npp), bytes, preflags=20, postflags=10 )    \n",
-    "        #Qout.put(tmp)\n",
     "        sd.play(0.15*tmp,samplerate=fs,blocking=True)\n",
     "        GPIO.output(PTT, GPIO.LOW)\n",
     "\n",
@@ -205,13 +205,13 @@
     "            \n",
     "    GPIO.output(PTT, GPIO.HIGH)\n",
     "    tmp = modem.modulatPacket(callsign, b\"\", \"END\", b\"This is the end of transmission\", preflags=2, postflags=80 )\n",
-    "    #Qout.put(tmp)\n",
     "    GPIO.output(PTT, GPIO.LOW)\n",
     "\n",
     "\n",
     "    print(\"Done\")\n",
     "send_packets()\n",
-    "print(time.time() - starttime)"
+    "print(time.time() - starttime)\n",
+    "byte_img.close()"
    ]
   }
  ],
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
