forgot to add gain

--- a/ee123-project/ee123-project-send.ipynb
+++ b/ee123-project/ee123-project-send.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "fs = 48000\n",
     "modem = TNC.TNCaprs(fs = fs ,Abuffer = 512,Nchunks = 1)\n",
-    "\n",
+    "gain = 0.15\n",
     "\n",
     "\n",
     "Qout = Queue.Queue()\n",
@@ -191,12 +191,13 @@
     "    GPIO.output(PTT, GPIO.HIGH)\n",
     "    npp = 0\n",
     "    tmp = modem.modulatPacket(callsign, b\"\", 'BEGIN', img_name.encode() , preflags=80, postflags=10 )\n",
+    "    sd.play(gain*tmp,samplerate=fs,blocking=True)\n",
     "    GPIO.output(PTT, GPIO.LOW)\n",
     "    while(1):\n",
     "        GPIO.output(PTT, GPIO.HIGH)\n",
     "        bytes = byte_img.read(256)\n",
     "        tmp = modem.modulatPacket(callsign, b\"\", str(npp), bytes, preflags=20, postflags=10 )    \n",
-    "        sd.play(0.15*tmp,samplerate=fs,blocking=True)\n",
+    "        sd.play(gain*tmp,samplerate=fs,blocking=True)\n",
     "        GPIO.output(PTT, GPIO.LOW)\n",
     "\n",
     "        npp = npp+1\n",
@@ -205,6 +206,7 @@
     "            \n",
     "    GPIO.output(PTT, GPIO.HIGH)\n",
     "    tmp = modem.modulatPacket(callsign, b\"\", \"END\", b\"This is the end of transmission\", preflags=2, postflags=80 )\n",
+    "    sd.play(gain*tmp,samplerate=fs,blocking=True)\n",
     "    GPIO.output(PTT, GPIO.LOW)\n",
     "\n",
     "\n",
