added compression and decompression as a function

--- a/compression_decompression_asfunctions.ipynb
+++ b/compression_decompression_asfunctions.ipynb
@@ -601,18 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "#test\n",
     "rgbImage = misc.imread(\"createrLake.tiff\")\n",
-    "y,cr,cb = compress(rgbImage,30)\n"
+    "y,cr,cb = compress(rgbImage,25)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,16 +621,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f215dee04e0>"
+       "<matplotlib.image.AxesImage at 0x7f215da6d7f0>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,16 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22.7921371966322"
+       "24.238988677025"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,69 +658,6 @@
    "source": [
     "EE123_psnr(rgbImage,dec_image)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
