add compression functions to send and recieve

--- a/ee123-project/ee123-project-recieve.ipynb
+++ b/ee123-project/ee123-project-recieve.ipynb
@@ -17,6 +17,7 @@
     "import io\n",
     "import TNCmodem as TNC\n",
     "from PIL import Image\n",
+    "import compression\n",
     "#\n",
     "from numpy import pi\n",
     "from numpy import sin\n",
@@ -106,7 +107,7 @@
     "\n",
     "#start recording\n",
     "st_rec.start()\n",
-    "fname = \"\"\n",
+    "#fname = \"\"\n",
     "\n",
     "def decode_packets():\n",
     "    print(\"decoding packets\")\n",
@@ -133,9 +134,9 @@
     "            print(infostr)\n",
     "\n",
     "            if state == 0 and ax.destination[:5]==\"BEGIN\":\n",
-    "                #f1 = open(\"rec_\"+ax.info.decode(),\"wb\")\n",
-    "                fname = \"rec_\"+ax.info.decode()\n",
-    "                f1 = io.BufferedWriter(Bytes.IO())\n",
+    "                f1 = open(\"rec_\"+ax.info.decode(),\"wb\")\n",
+    "                #fname = \"rec_\"+ax.info.decode()\n",
+    "                #f1 = io.BufferedWriter(Bytes.IO())\n",
     "                state = 1\n",
     "            elif state == 1 and ax.destination[:3] == \"END\": \n",
     "                state = 2  \n",
@@ -148,7 +149,7 @@
     "\n",
     "    print(time.time() - starttime)\n",
     "    \n",
-    "    #f1.close()\n",
+    "    f1.close()\n",
     "\n",
     "decode_packets()\n",
     "st_rec.stop()\n",
@@ -161,12 +162,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1.seek(0)\n",
-    "recv_img = Image.open(f1)\n",
+    "# f1.seek(0)\n",
+    "#recv_img = Image.open(f1)\n",
+    "zip_recv = zipfile.ZipFile(\"rec_img.zip\", 'r')\n",
+    "zip_recv.extractall(\".\")\n",
+    "zip_recv.close()\n",
     "#inverse DCT function here\n",
     "#new_img = ###FUNCTION(recv_img)\n",
-    "new_img = recv_img #temporary\n",
-    "new_img.save(fname)"
+    "y = open(\"imagey.txt\", 'r')\n",
+    "cr = open(\"imagecr.txt\", 'r')\n",
+    "cb = open(\"imagecb.txt\", 'r')\n",
+    "dec_image=decompress(y,cr,cb)\n",
+    "plt.imshow(dec_image)\n",
+    "\n",
+    "rgbImage = imageio.imread(\"createrLake.tiff\")\n",
+    "EE123_psnr(rgbImage,dec_image)"
    ]
   }
  ],
