--- a/ee123-project/ee123-project-send.ipynb
+++ b/ee123-project/ee123-project-send.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,9 @@
     "#\n",
     "import io\n",
     "import TNCmodem as TNC\n",
+    "import compression\n",
+    "import zipfile\n",
+    "import imageio\n",
     "#\n",
     "from numpy import pi\n",
     "from numpy import sin\n",
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,32 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "  0 bcm2835 ALSA: - (hw:0,0), ALSA (0 in, 2 out)\n",
-       "  1 bcm2835 ALSA: IEC958/HDMI (hw:0,1), ALSA (0 in, 2 out)\n",
-       "  2 USB Audio Device: - (hw:1,0), ALSA (1 in, 2 out)\n",
-       "  3 sysdefault, ALSA (0 in, 128 out)\n",
-       "  4 dmix, ALSA (0 in, 2 out)\n",
-       "* 5 default, ALSA (1 in, 2 out)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sd.query_devices()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,65 +104,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def downsample(img, factor):\n",
-    "    \"\"\"Takes in an Image object and int factor. It then downsamples and returns the downsampled image\"\"\"\n",
-    "    np_img = np.array(img)\n",
-    "    down = np_img[::factor,::factor,:]\n",
-    "    down_img = Image.fromarray(down)\n",
-    "    print(down.shape)\n",
-    "    return down_img"
+    "# def downsample(img, factor):\n",
+    "#     \"\"\"Takes in an Image object and int factor. It then downsamples and returns the downsampled image\"\"\"\n",
+    "#     np_img = np.array(img)\n",
+    "#     down = np_img[::factor,::factor,:]\n",
+    "#     down_img = Image.fromarray(down)\n",
+    "#     print(down.shape)\n",
+    "#     return down_img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(30, 45, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img_name = \"test.jpg\"\n",
-    "image =  Image.open(img_name)\n",
-    "### test.jpg is any image file to test. rename your image to test\n",
-    "#downsample image or place compression function\n",
-    "cmp_img = downsample(image, 30)\n",
+    "img_name = \"createrLake.tiff\"\n",
+    "image =  imageio.imread(img_name)\n",
     "#cmp_img = ###FUNCTION###\n",
-    "\n",
+    "y,cr,cb = compression.compress(image,25)\n",
+    "with zipfile.ZipFile(\"img.zip\", 'w') as myzip:\n",
+    "    myzip.write(\"imagey.txt\")\n",
+    "    myzip.write(\"imagecr.txt\")\n",
+    "    myzip.write(\"imagecb.txt\")\n",
     "#add downsampled image to a byte buffer\n",
-    "byte_img = io.BytesIO()\n",
-    "cmp_img.save(byte_img, format='PNG', optimize=True) #converts to lossless PNG with compression\n",
-    "byte_img.seek(0)\n",
-    "byte_img = io.BufferedReader(byte_img)"
+    "# byte_img = io.BytesIO()\n",
+    "# cmp_img.save(byte_img, format='PNG', optimize=True) #converts to lossless PNG with compression\n",
+    "# byte_img.seek(0)\n",
+    "# byte_img = io.BufferedReader(byte_img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending packets\n",
-      "Done\n",
-      "35.21815800666809\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### APRS packet send image\n",
     "callsign = \"KM6BKP\"\n",
+    "f = open(\"img.zip\",\"rb\")\n",
     "\n",
     "fs = 48000\n",
     "modem = TNC.TNCaprs(fs = fs ,Abuffer = 512,Nchunks = 1)\n",
@@ -190,12 +161,12 @@
     "    print(\"Sending packets\")\n",
     "    GPIO.output(PTT, GPIO.HIGH)\n",
     "    npp = 0\n",
-    "    tmp = modem.modulatPacket(callsign, b\"\", 'BEGIN', img_name.encode() , preflags=80, postflags=10 )\n",
+    "    tmp = modem.modulatPacket(callsign, b\"\", 'BEGIN', b\"img.zip\" , preflags=80, postflags=10 )\n",
     "    sd.play(gain*tmp,samplerate=fs,blocking=True)\n",
     "    GPIO.output(PTT, GPIO.LOW)\n",
     "    while(1):\n",
     "        GPIO.output(PTT, GPIO.HIGH)\n",
-    "        bytes = byte_img.read(256)\n",
+    "        bytes = f.read(256)\n",
     "        tmp = modem.modulatPacket(callsign, b\"\", str(npp), bytes, preflags=20, postflags=10 )    \n",
     "        sd.play(gain*tmp,samplerate=fs,blocking=True)\n",
     "        GPIO.output(PTT, GPIO.LOW)\n",
